// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserTable empty matches snapshot 1`] = `
<body>
  <div>
    <table
      class="table table-striped table-hover"
    >
      <thead>
        <tr>
          <th>
             ID 
          </th>
          <th>
             Name 
          </th>
          <th>
             Login 
          </th>
          <th>
             Permission 
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</body>
`;

exports[`UserTable filled matches snapshot 1`] = `
<body>
  <div>
    <table
      class="table table-striped table-hover"
    >
      <thead>
        <tr>
          <th>
             ID 
          </th>
          <th>
             Name 
          </th>
          <th>
             Login 
          </th>
          <th>
             Permission 
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
             
            42c3fdb4dc0e5eb871d01e11
             
          </td>
          <td>
             
            Jhonny Test
             
          </td>
          <td>
             
            jhonny@test.com
             
          </td>
          <td>
             
            2
             
          </td>
        </tr>
        <tr>
          <td>
             
            42c3fdb4dc0e5eb871d01e12
             
          </td>
          <td>
             
            H. Rocha
             
          </td>
          <td>
             
            hsrocha@loyola.edu
             
          </td>
          <td>
             
            1
             
          </td>
        </tr>
        <tr>
          <td>
             
            42c3fdb4dc0e5eb871d01e13
             
          </td>
          <td>
             
            John Doe
             
          </td>
          <td>
             
            jd@aol.com
             
          </td>
          <td>
             
            2
             
          </td>
        </tr>
        <tr>
          <td>
             
            42c3fdb4dc0e5eb871d01e14
             
          </td>
          <td>
             
            Jane Doe
             
          </td>
          <td>
             
            janed@compuserve.com
             
          </td>
          <td>
             
            2
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</body>
`;
